# pythoneersdag-computer-vision

./: .gitignore  README.md  pyproject.toml
data/3_neural_networks/pre-trained-classifier/: args.yaml  results.csv
data/images/easter_eggs/: Untitled.ipynb  negatives.txt
data/images/easter_eggs/positives/images/: positives.txt
data/images/easter_eggs/positives/labels/: Egg-14-_jpg.rf.c492df65f5b63efb53a2096041d062cb.txt  Egg-2-_jpg.rf.ce70fd1fccc168867470ce6e52375002.txt  Egg-26-_jpg.rf.057ec6da06a648dae4fde061a3e131b5.txt  Egg-31-_jpg.rf.741fcf84f99819929fd611f358be3d24.txt  Egg-4-_jpg.rf.f36eaed4e11f63fb99d1ae43af9759aa.txt  Egg-7-_jpg.rf.35fd79456542f50a72acb645bf738136.txt
data/images/easter_eggs/test/labels/: Egg-6-_jpg.rf.8418e5af54404627e8609655d38cf4a1.txt
data/images/easter_eggs/train/: Untitled.ipynb
data/images/easter_eggs/train/labels/: Egg-16-_jpg.rf.af8298dec37f66e93c7e14c8f37576eb.txt  Egg-25-_jpg.rf.2a9cde49c3693b65bb7dced1c3ec779f.txt  Egg-28-_jpg.rf.f418d0db35bd6b5e16aa9a280a511965.txt  Egg-3-_jpg.rf.7079f34768a8a3902bcb7d7f0bde5b86.txt
data/images/easter_eggs/valid/labels/: Egg-18-_jpg.rf.ea7356fcaa8fe37955ccb2ac9a02bcdf.txt  Egg-21-_jpg.rf.722df3f41c35d1c0a35c04b4d137e53d.txt  Egg-23-_jpg.rf.f1da2c4e88e5b51535776330b14788df.txt  Egg-29-_jpg.rf.791f370dac192c00a9414df4f297ce32.txt  Egg-8-_jpg.rf.b8feb04ca6beb9094317ea6eb30bfba5.txt
notebooks/: 1_hand_crafted_features.ipynb  2_automating_features.ipynb  3_neural_networks.ipynb  Excersise1.ipynb  Exercise.ipynb  Exercise2.ipynb  egg.yaml  nn.py  testje2.ipynb  train_classifier.ipynb
notebooks/.ipynb_checkpoints/: testje2-checkpoint.ipynb
notebooks/images/easter_eggs/: positives.txt
notebooks/images/easter_eggs/positives/: Untitled.ipynb
notebooks/images/easter_eggs/positives/labels/: Egg-11-_jpg.rf.c3807c2724a80feecc569ed46d2cf0f7.txt  Egg-12-_jpg.rf.dd41d31ace0e57c1d1fe28878574b3f1.txt  Egg-17-_jpg.rf.f287b77255f207fa1c1de1cc609bec26.txt  (+2 more)
utils/: convert-labels.ipynb  image_tools.py
(+12 files in other folders)
