[project]
name = "computer-vision"
version = "0.1.0"
description = "toml file for computer vision project"
authors = [
    {name = "Nathan Hoogendorp", email = "nathan.hoogendorp@soprasteria.com"},
    {name = "Wim-Peter Dirks", email = "wim-peter.dirks@soprasteria.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "notebook (>=7.3.3,<8.0.0)",
    "jupyterlab (>=4.4.0,<5.0.0)",
    "numpy (>=1.23.0,<=2.1.1)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "ultralytics (>=8.3.107,<9.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
